# tribl_binary_search

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  mainpage.md
include/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
